--- a/service/index.css
+++ b/service/index.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Young+Serif&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+
+* {
+    scroll-behavior: smooth;
+    font-family: Roboto Condensed;
+}
+
 .centered {
     position: absolute;
     top: 50%;
@@ -7,4 +15,15 @@
 
 .profile {
     width: 130px !important;
+}
+
+.hero-normal {
+    padding: 40px;
+}
+
+.hero-head {
+    background-image: url('https://cdn.discordapp.com/attachments/1071401485239332864/1157694305176133792/aquaV1.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
