--- a/service/index.css
+++ b/service/index.css
@@ -6,6 +6,20 @@
     font-family: Roboto Condensed;
 }
 
+body::-webkit-scrollbar {
+    width: 13px;
+}
+
+body::-webkit-scrollbar-track {
+    background: #233E71;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #345ca8;
+    border-radius: 20px;
+    border: 3px solid #233E71;
+}
+
 .centered {
     position: absolute;
     top: 50%;
@@ -62,4 +76,8 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+}
+
+.image-feature {
+    box-shadow: rgba(20, 55, 119, 0.4) -5px 5px, rgba(35, 62, 113, 0.3) -10px 10px, rgba(35, 62, 113, 0.2) -15px 15px, rgba(35, 62, 113, 0.1) -20px 20px, rgba(35, 62, 113, 0.05) -25px 25px !important;
 }
