--- a/service/index.css
+++ b/service/index.css
@@ -81,3 +81,11 @@ body::-webkit-scrollbar-thumb {
 .image-feature {
     box-shadow: rgba(20, 55, 119, 0.4) -5px 5px, rgba(35, 62, 113, 0.3) -10px 10px, rgba(35, 62, 113, 0.2) -15px 15px, rgba(35, 62, 113, 0.1) -20px 20px, rgba(35, 62, 113, 0.05) -25px 25px !important;
 }
+
+.button-top {
+    position: fixed !important;
+    bottom: 20px !important;
+    right: 20px !important;
+    display: none;
+    z-index: 1;
+}
