--- a/service/index.css
+++ b/service/index.css
@@ -99,6 +99,13 @@ body::-webkit-scrollbar-thumb {
     background-size: cover;
 }
 
+.arrow-assets {
+    background-image: url('./assets/background/Statics-assets.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
 .image-feature {
     box-shadow: rgba(20, 55, 119, 0.4) -5px 5px, rgba(35, 62, 113, 0.3) -10px 10px, rgba(35, 62, 113, 0.2) -15px 15px, rgba(35, 62, 113, 0.1) -20px 20px, rgba(35, 62, 113, 0.05) -25px 25px !important;
 }
@@ -126,5 +133,14 @@ body::-webkit-scrollbar-thumb {
     transform: translateX(-50%);
     z-index: 1;
     width: 350px;
+    margin: auto;
+}
+
+.player-top {
+    position: fixed !important;
+    bottom: -40% !important;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
     margin: auto;
 }
