--- a/firebase/public/index.css
+++ b/firebase/public/index.css
@@ -212,3 +212,21 @@ body::-webkit-scrollbar-thumb {
 .prepare-load {
     height: 50vh;
 }
+
+.swing-in-top-fwd {
+    animation: swing-in-top-fwd 1s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
+}
+
+@keyframes swing-in-top-fwd {
+    0% {
+        transform: rotateX(-100deg);
+        transform-origin: top;
+        opacity: 0;
+    }
+
+    100% {
+        transform: rotateX(0deg);
+        transform-origin: top;
+        opacity: 1;
+    }
+}
