--- a/service/index.css
+++ b/service/index.css
@@ -126,7 +126,7 @@ body::-webkit-scrollbar-thumb {
 
 .button-top {
     position: fixed !important;
-    bottom: 85px !important;
+    bottom: 85px;
     right: 20px !important;
     display: none;
     z-index: 1;
@@ -274,5 +274,29 @@ body::-webkit-scrollbar-thumb {
 @media only screen and (max-width: 768px) {
     .lastjoin {
         flex-direction: column !important;
+    }
+
+    .button-dark {
+        display: none !important;
+    }
+
+    .button-top {
+        bottom: 20px !important;
+    }
+}
+
+.tilt-in-bottom-1 {
+    animation: tilt-in-bottom-1 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@keyframes tilt-in-bottom-1 {
+    0% {
+        transform: rotateY(30deg) translateY(300px) skewY(-30deg);
+        opacity: 0;
+    }
+
+    100% {
+        transform: rotateY(0deg) translateY(0) skewY(0deg);
+        opacity: 1;
     }
 }
