Update status section

--- a/service/main/index.css
+++ b/service/main/index.css
@@ -162,6 +162,10 @@ body::-webkit-scrollbar-thumb {
     z-index: 1;
 }
 
+.heartbeat {
+	animation: heartbeat 1.5s ease-in-out infinite both;
+}
+
 .alert-top {
     position: fixed !important;
     top: 20px !important;
@@ -357,4 +361,28 @@ body::-webkit-scrollbar-thumb {
 .betteruptime-announcement {
     color: black !important;
     background-color: #DA7706 !important;
+}
+
+@keyframes heartbeat {
+  from {
+    transform: scale(1);
+    transform-origin: center center;
+    animation-timing-function: ease-out;
+  }
+  10% {
+    transform: scale(0.91);
+    animation-timing-function: ease-in;
+  }
+  17% {
+    transform: scale(0.98);
+    animation-timing-function: ease-out;
+  }
+  33% {
+    transform: scale(0.87);
+    animation-timing-function: ease-in;
+  }
+  45% {
+    transform: scale(1);
+    animation-timing-function: ease-out;
+  }
 }
